--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,168 @@
-.App {
+*{
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  font-family: 'Poppins', sans-serif;
+}
+.hide{
+  display: none;
+  opacity: 1;
+}
+.containerDropdown{
+  display: flex;
+  background-color: #0093E9;
+  background-image: linear-gradient(160deg, #0093E9 0%, #80D0C7 100%);
+  height: 100%;
+  min-height: 100vh;
+  width: 100%;
+  justify-content: center;
+  align-items: center;
+}
+
+/* Dropdown */
+.wrapper-list{
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+  border-radius: 1rem;
+  padding: 3rem;
+  margin: 3rem;
+  width: fit-content;
+  background-color: #ecebee;
+}
+.wrapper-list h1{
+  font-weight: 800;
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.firstForm{
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  gap:1rem
+}
+.inputAndSelect{
+
+  width: fit-content;
+  display: flex;
+  gap: 1rem;
+}
+.inputAndSelect select{
+  border: 1px solid #0093E9;
+
+  height: 2rem;
+  border-radius: 1rem ;
+  width: 80%;
+  max-width: 20rem;
+  min-width: 15rem;
+  text-align: center;
+  color: black;
+  font-size:medium
+}
+.inputAndSelect select:hover{
+  cursor: pointer;
+  border: 1px solid #0093E9;
+}
+.firstForm input{
+
+  border: 1px solid #0093E9;
+  height: 2rem;
+  border-radius: 1rem;
+  width: 80%;
+  max-width: 20rem;
+  min-width: 15rem;
+  text-align: center;
+  color: black;
+  font-size:medium;
+  border-style: solid;
+
+}
+.firstForm input::placeholder{
+  text-align: center;
+  color: black;
+  border: none;
+  font-size: medium;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.btnForm{
+  display: flex;
+  width: 40%;
+  justify-content: center;
+  gap: 1rem;
+}
+.firstForm button{
+  padding: .25rem .5rem;
+  border-radius: .25rem;
+  border: 1px solid black;
+  color: black;
+  font-weight: bold;
+  transition: 200ms ease;
+
+}
+.firstForm button:hover{
+  color: white;
+  transition: 200ms ease;
+  background-color: #0093E9;
+}
+.labelSweetAlert{
+  padding: 1rem;
+}
+/* Cards */
+.cardContainer{
   display: flex;
   flex-direction: column;
   align-items: center;
+  align-self: center;
+}
+.sendObject{
+  width: 15rem;
+  height: 2rem;
+  font-weight: bold;
+  font-size: larger;
+  border-radius: .5rem;
+  border: 2px solid  #80D0C7 ;
+  cursor: pointer;
+}
+.sendObject:hover{
+  background-color: white;
+}
+.card{
+  display: flex;
+  padding: 1rem;
+  gap:1rem;
+  flex-direction: row;
+  flex-wrap: wrap;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+}
+.dataList{
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  border-radius: .5rem;
+  padding: 1rem;
+  border: 1px solid grey;
+  list-style: none;
+}
+.dataList li{
+  padding: 1rem;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
-.App-link {
-  color: #61dafb;
+/* paginacion*/
+.footer{
+  display: flex;
+  width: 100%;
+  justify-content: space-between;
+  padding: 1rem 4rem;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
+@media (max-width:320px) {
+  .wrapper-list{
+    padding: 1rem;
+    margin: 1rem;
   }
 }
